kubernetes/apps/prowlarr/flaresolverr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaresolverr
  namespace: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: flaresolverr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: flaresolverr
    spec:
      containers:
        - name: flaresolverr
          image: ghcr.io/flaresolverr/flaresolverr:v3.5.2
          readinessProbe:
            tcpSocket:
              port: 8191
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8191
            periodSeconds: 30
            failureThreshold: 5
          resources:
            requests:
              cpu: 50m
              memory: 256Mi
            limits:
              memory: 1Gi
          ports:
            - name: http
              containerPort: 8191
---
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr
  namespace: prowlarr
spec:
  selector:
    app.kubernetes.io/name: flaresolverr
  ports:
    - name: http
      port: 8191
      targetPort: 8191
