kubernetes/apps/prowlarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
  namespace: prowlarr
spec:
  parentRefs:
    - name: main
      namespace: network
  hostnames:
    - "prowlarr.zlaya.tech"
  rules:
    - backendRefs:
        - name: prowlarr
          port: 9696
